# hatchet

./: .codecov.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  LICENSE  MetricDBReader.py  README.md  depth_test.py  hatchetrc.yaml  install.sh  pyproject.toml  pytest.ini  requirements.txt  roundtrip.py  setup.py  version.py
Roundtrip_Examples/: forest.js  interactiveTree.js  katy_query_language_examples.ipynb  require.config  roundtrip-query-demo.ipynb  roundtrip.py  roundtripTree.js
callpy/: CCNode.py  CCTree.py  HPCTDBReader.py  __init__.py
docs/: Makefile  advanced_examples.rst  analysis_examples.rst  basic_examples.rst  basic_tutorial.rst  chopper_api.rst  conf.py  data_generation.rst  developer_guide.rst  examples.rst  getting_started.rst  hatchet_style.py  index.rst  install.rst  publications.rst  query_lang.rst  requirements.txt  scaling_examples.rst  simple_examples.rst  tutorial.rst  tutorial_intro.rst  tutorial_intro_dataframe.rst  tutorial_intro_graph.rst  tutorial_intro_graphframe.rst  tutorial_intro_queries.rst  tutorial_intro_start.rst  tutorial_intro_visualizing.rst  tutorial_setup.rst  user_guide.rst  userguide.rst
examples/: caliper.py  caliper_cali.py  caliper_literal.py  dag_literal.py  gprof_dot.py  hpctoolkit-helper.py  hpctoolkit.py  time-read.py  tree_literal.py  treeview.py
hatchet/: CCNode.py  CCTree.py  HPCTDBReader.py  __init__.py  caliper_reader.py  ccnode.py  cctree.py  cdb_reader.py  chopper.py  frame.py  frameid.py  frameindex.py  gprof_dot_reader.py  graph.py  graphframe.py  hpctdb_reader.py  hpctoolkit_reader.py  node.py  performance_analyzer.py  query.py  query_matcher.py  version.py
scripts/: CCTReader.py  ExpXMLReader.py  MetricDBReader.py  metricdb_reader.py  xml_reader.py
tests/: TestReader.py  TestTree.py  caliper.py  callgrind.py  (+6 more)
(+497 files in other folders)
