[tool.poetry]
name = "hatchet"
version = "1.3.1a0"
description = "A Python library for analyzing hierarchical performance data."
authors = [
    "Abhinav Bhatele <bhatele@cs.umd.edu>",
    "Stephanie Brink <brink2@llnl.gov>",
    "Todd Gamblin <tgamblin@llnl.gov>",
]
license = "MIT"

[tool.black]
line-length = 88
target-version = ['py27', 'py35', 'py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
