[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "hatchet"
version = "1.4.0"
description = "A Python library for analyzing hierarchical performance data."
authors = [
    "Abhinav Bhatele <bhatele@cs.umd.edu>",
    "Stephanie Brink <brink2@llnl.gov>",
    "Onur Cankur <ocankur@umd.edu>",
    "Todd Gamblin <tgamblin@llnl.gov>",
]
license = "MIT"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
